tests/FSharp.Compiler.ComponentTests/Conformance/TypeForwarding/NegativeCases/Class_NG_WidenAccess.fs
let f = new N_003.Foo()
let b = new N_003.Bar()
let rv = f.getValue() + b.getValue()

exit rv
